fix: 입력 값이 비어있을 때 조건 로직 수정